# VaultZip

./: .gitignore  LICENSE  README.md  README.zh-CN.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  archivekit_jni.cpp
app/src/main/cpp/core/: ArchiveRouter.cpp  ArchiveRouter.h  ArchiveTypes.h
app/src/main/cpp/jni/: JniConverters.cpp  JniConverters.h  JniErrors.cpp  JniErrors.h
app/src/main/java/com/vaultzip/: App.kt
app/src/main/java/com/vaultzip/archive/data/: ArchiveRepository.kt  ArchiveRepositoryImpl.kt
app/src/main/java/com/vaultzip/archive/impl/: MimeRouter.kt  VolumeDetector.kt
app/src/main/java/com/vaultzip/archive/model/: ArchiveEntry.kt  ArchiveError.kt  ArchiveFormat.kt  ArchiveInput.kt  ArchivePartSource.kt  ArchiveSelection.kt  ExtractRequest.kt  ExtractResult.kt  ExtractSingleEntryRequest.kt  ExtractSingleEntryResult.kt  OutputTarget.kt  PreviewableType.kt  VolumeResolveResult.kt  VolumeSet.kt
app/src/main/java/com/vaultzip/archive/native/: NativeArchiveBridge.kt  NativeArchiveBridgeImpl.kt  NativeArchiveException.kt  NativeDtos.kt  NativeProgressCallback.kt
app/src/main/java/com/vaultzip/compress/: CompressRepository.kt  CompressRepositoryImpl.kt
app/src/main/java/com/vaultzip/compress/model/: CompressRequest.kt  CompressResult.kt  CompressSource.kt
app/src/main/java/com/vaultzip/di/: ArchiveBridgeModule.kt  ArchiveRepositoryModule.kt  CompressRepositoryModule.kt  DispatcherModule.kt  SessionModule.kt  StorageModule.kt
app/src/main/java/com/vaultzip/domain/: CreateZipArchiveUseCase.kt  DetectArchiveFormatUseCase.kt  ExtractArchiveUseCase.kt  ExtractSingleEntryUseCase.kt  ListArchiveEntriesUseCase.kt  ResolveArchiveSelectionUseCase.kt  ScanArchiveCandidatesUseCase.kt
app/src/main/java/com/vaultzip/preview/: PreparedPreview.kt  PreviewCoordinator.kt  PreviewIntentFactory.kt  PreviewOpenException.kt
app/src/main/java/com/vaultzip/session/: InMemoryPasswordSessionStore.kt  PasswordSessionStore.kt
app/src/main/java/com/vaultzip/storage/: ArchiveCandidateScanner.kt  ArchiveSiblingScanner.kt  DocumentTreeArchiveCandidateScanner.kt  DocumentTreeScanner.kt  OutputDirectoryManager.kt  TempFileProvider.kt  UriResolver.kt
app/src/main/java/com/vaultzip/ui/archive/: ArchiveBrowserFragment.kt  ArchiveEntryAdapter.kt
app/src/main/java/com/vaultzip/ui/compress/: CompressFragment.kt  CompressUiState.kt  CompressViewModel.kt
app/src/main/java/com/vaultzip/ui/extract/: ExtractFragment.kt
app/src/main/java/com/vaultzip/ui/main/: MainActivity.kt  MainUiEvent.kt  MainUiState.kt  MainViewModel.kt  PendingArchiveAction.kt  PendingVolumePicker.kt
app/src/main/java/com/vaultzip/ui/password/: PasswordPromptDialogFragment.kt  PasswordPromptRequest.kt
app/src/main/java/com/vaultzip/ui/preview/: PreviewActivity.kt  PreviewUiState.kt  PreviewViewModel.kt
app/src/main/java/com/vaultzip/ui/preview/viewer/: ImagePreviewFragment.kt  PdfPreviewFragment.kt  TextPreviewFragment.kt
app/src/main/java/com/vaultzip/ui/volume/: VolumeCandidate.kt  VolumePickerDialogFragment.kt
app/src/main/res/drawable/: bg_card_surface.xml  bg_empty_state.xml  bg_segment_selected.xml  bg_segment_unselected.xml  ic_launcher_foreground_selected.xml
app/src/main/res/layout/: activity_main.xml  fragment_archive_browser.xml  fragment_compress.xml  fragment_extract.xml  fragment_image_preview.xml  fragment_pdf_preview.xml  fragment_text_preview.xml  item_archive_entry.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
